--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "lbl-note",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "拉布拉马 <2039203690@qq.com>",
   "description": "A custom note software",
-  "license": null,
+  "license": "MIT",
   "main": "./dist/electron/main.js",
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
