--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lbl-note",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "A custom note software",
   "author": "拉布拉马 <2039203690@qq.com>",
   "scripts": {
@@ -66,7 +66,7 @@
     "webpack-merge": "^4.1.3"
   },
   "build": {
-    "productName": "lbl-note",
+    "productName": "拉布拉记",
     "appId": "cn.tuise233.lblnote",
     "directories": {
       "output": "build"
